--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -6,7 +6,7 @@ on:
       - master
 jobs:
   deploy-site:
-    if: false
+    if: true
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -14,16 +14,15 @@ jobs:
       with:
         persist-credentials: false
 
-    - name: Push git directory as branch
-      uses: s0/git-publish-subdir-action@develop
-      env:
-        REPO: self
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
         FOLDER: __site
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-and-deploy:
-    if: true
+    if: false
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -32,7 +31,6 @@ jobs:
         persist-credentials: false
     # NOTE: Python is necessary for the pre-rendering (minification) step
     - name: Install python
-      if: false
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
@@ -40,7 +38,6 @@ jobs:
     # packages such as PyPlot.
     # - run: pip install matplotlib
     - name: Install Julia
-      if: false
       uses: julia-actions/setup-julia@v1
       with:
         version: 1.5
