Fixing deployment on GitHub

--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -14,6 +14,8 @@ jobs:
       with:
         persist-credentials: false
 
+    - run: 'mkdir __site/minimal && mv __site/* __site/minimal'
+
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
